# notice-radar

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  langgraph.json  pyproject.toml  pyrightconfig.json
.ipynb_checkpoints/: eval_ragas-checkpoint.ipynb  test_rag-checkpoint.ipynb
.omx/: metrics.json
.omx/logs/: omx-2026-04-23.jsonl  tmux-hook-2026-04-23.jsonl  turns-2026-04-23.jsonl
.omx/state/: session.json  subagent-tracking.json  tmux-hook-state.json
apps/api/: AGENTS.md  CLAUDE.md  pyproject.toml  run_api.py
apps/api/docs/: fastapi-server.md
apps/api/src/: dependencies.py  webapp.py
apps/api/src/api/: __init__.py  dependencies.py  webapp.py
apps/api/src/api/routers/: __init__.py  api_config.py  auth.py  conversation.py  document.py  faq.py  lead.py  settings.py
apps/api/src/routers/: __init__.py  document.py
apps/api/tests/: test_document_embeddings.py  test_document_hybrid_parsing.py  test_document_table_aware_parsing.py
apps/graph/: AGENTS.md  CLAUDE.md  pyproject.toml
apps/graph/docs/: chatbot-defaults.md  langgraph-server.md
apps/graph/src/: graph.py  registry.py  state.py
apps/graph/src/graph/: __init__.py  graph.py  prompts.py  registry.py
apps/graph/src/graph/nodes/: agent_generate.py  agent_tools.py  filter_output.py  router.py
apps/graph/src/nodes/: __init__.py  agent_generate.py  agent_tools.py  filter_output.py  router.py  trace.py
apps/graph/src/tools/: __init__.py  retrieve.py
apps/graph/tests/: test_agent_tools.py  test_router.py
docs/: architecture.md  conventions.md  database.md  getting-started.md
(+7 files in other folders)
