[project]
name = "rag-api"
version = "0.1.0"
description = "FastAPI server for RAG agent platform"
requires-python = ">=3.13"
dependencies = [
    "rag-core",
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "pdfplumber>=0.11.4",
    "pypdf>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
