[project]
name = "rag-graph"
version = "0.1.0"
description = "LangGraph server for RAG agent platform"
requires-python = ">=3.13"
dependencies = [
    "rag-core",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
